test_scores/negative_dimers/features/Q14CX7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q14CX7.pkl.xz